--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,11 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
+        <!-- ✅ JUnit 5 -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -24,11 +26,15 @@
 
     <build>
         <plugins>
+
+            <!-- ✅ Unit test -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
             </plugin>
+
+            <!-- ✅ Checkstyle -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -47,16 +53,21 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- ✅ JaCoCo Coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.12</version>
                 <executions>
+                    <!-- Coverage мэдээлэл цуглуулах -->
                     <execution>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
+
+                    <!-- Coverage тайлан -->
                     <execution>
                         <id>report</id>
                         <phase>test</phase>
@@ -64,6 +75,8 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
+
+                    <!-- ✅ Coverage шалгалт -->
                     <execution>
                         <id>check</id>
                         <goals>
@@ -72,7 +85,7 @@
                         <configuration>
                             <rules>
                                 <rule>
-                                    <element>BRANCH</element>
+                                    <element>CLASS</element>
                                     <limits>
                                         <limit>
                                             <counter>BRANCH</counter>
@@ -86,6 +99,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
